deploy: 54980e5fb3178343cea0d67573d1a6db096fc281

--- a/nodesnim/core/anchor.html
+++ b/nodesnim/core/anchor.html
@@ -119,6 +119,8 @@ function main() {
     title="Anchor(x1, y1, x2, y2: float): AnchorObj"><wbr />Anchor<span class="attachedType">AnchorObj</span></a></li>
   <li><a class="reference" href="#Anchor%2CVector2Obj%2CVector2Obj"
     title="Anchor(vec1, vec2: Vector2Obj): AnchorObj"><wbr />Anchor<span class="attachedType">AnchorObj</span></a></li>
+  <li><a class="reference" href="#Anchor"
+    title="Anchor(): AnchorObj"><wbr />Anchor<span class="attachedType">AnchorObj</span></a></li>
   <li><a class="reference" href="#clear%2CAnchorObj"
     title="clear(a: var AnchorObj)"><wbr />clear<span class="attachedType">AnchorObj</span></a></li>
   <li><a class="reference" href="#isEmpty%2CAnchorObj"
@@ -172,6 +174,13 @@ function main() {
 
 
 </dd>
+<a id="Anchor"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#Anchor"><span class="Identifier">Anchor</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <a href="anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Creates empty Anchor object.
+
+</dd>
 <a id="clear,AnchorObj"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#clear%2CAnchorObj"><span class="Identifier">clear</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -203,7 +212,7 @@ Returns true, if a is Anchor(0, 0, 0, 0)
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-12 13:25:10 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-16 08:29:02 UTC</small>
       </div>
     </div>
   </div>
