--- a/nodesnim/core/polygon2.html
+++ b/nodesnim/core/polygon2.html
@@ -129,8 +129,8 @@ function main() {
     title="intersects(self, other: Polygon2Ref): bool"><wbr />intersects<span class="attachedType">Polygon2Ref</span></a></li>
   <li><a class="reference" href="#intersects%2CPolygon2Ref%2CRect2Obj"
     title="intersects(self: Polygon2Ref; r: Rect2Obj): bool"><wbr />intersects<span class="attachedType">Polygon2Ref</span></a></li>
-  <li><a class="reference" href="#intersects%2CPolygon2Ref%2CCircleRef"
-    title="intersects(self: Polygon2Ref; circle: CircleRef): bool"><wbr />intersects<span class="attachedType">Polygon2Ref</span></a></li>
+  <li><a class="reference" href="#intersects%2CPolygon2Ref%2CCircleObj"
+    title="intersects(self: Polygon2Ref; circle: CircleObj): bool"><wbr />intersects<span class="attachedType">Polygon2Ref</span></a></li>
   <li><a class="reference" href="#move%2CPolygon2Ref%2CVector2Obj"
     title="move(self: Polygon2Ref; vec2: Vector2Obj)"><wbr />move<span class="attachedType">Polygon2Ref</span></a></li>
 
@@ -223,8 +223,8 @@ Returns true, if two polygons intersect.
 Returns true, if rect intersect with polygon.
 
 </dd>
-<a id="intersects,Polygon2Ref,CircleRef"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#intersects%2CPolygon2Ref%2CCircleRef"><span class="Identifier">intersects</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="polygon2.html#Polygon2Ref"><span class="Identifier">Polygon2Ref</span></a><span class="Other">;</span> <span class="Identifier">circle</span><span class="Other">:</span> <a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="intersects,Polygon2Ref,CircleObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#intersects%2CPolygon2Ref%2CCircleObj"><span class="Identifier">intersects</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="polygon2.html#Polygon2Ref"><span class="Identifier">Polygon2Ref</span></a><span class="Other">;</span> <span class="Identifier">circle</span><span class="Other">:</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns true, if circle intersect with polygon.
@@ -247,7 +247,7 @@ Moves polygon.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-12 13:25:15 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-16 08:29:09 UTC</small>
       </div>
     </div>
   </div>
