--- a/nodesnim/core/circle.html
+++ b/nodesnim/core/circle.html
@@ -109,8 +109,6 @@ function main() {
       <li><a class="reference" href="#CircleObj"
     title="CircleObj = object
   x*, y*, r*: float"><wbr />Circle<wbr />Obj<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#CircleRef"
-    title="CircleRef = ref CircleObj"><wbr />Circle<wbr />Ref<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -118,19 +116,19 @@ function main() {
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#Circle%2Cfloat%2Cfloat%2Cfloat"
-    title="Circle(x, y, r: float): CircleRef"><wbr />Circle<span class="attachedType">CircleRef</span></a></li>
+    title="Circle(x, y, r: float): CircleObj"><wbr />Circle<span class="attachedType">CircleObj</span></a></li>
   <li><a class="reference" href="#Circle%2CVector2Obj%2Cfloat"
-    title="Circle(vec: Vector2Obj; r: float): CircleRef"><wbr />Circle<span class="attachedType">CircleRef</span></a></li>
-  <li><a class="reference" href="#contains%2CCircleRef%2Cfloat%2Cfloat"
-    title="contains(self: CircleRef; x, y: float): bool"><wbr />contains<span class="attachedType">CircleRef</span></a></li>
-  <li><a class="reference" href="#contains%2CCircleRef%2CVector2Obj"
-    title="contains(self: CircleRef; vec2: Vector2Obj): bool"><wbr />contains<span class="attachedType">CircleRef</span></a></li>
-  <li><a class="reference" href="#contains%2CCircleRef%2CCircleRef"
-    title="contains(self, other: CircleRef): bool"><wbr />contains<span class="attachedType">CircleRef</span></a></li>
-  <li><a class="reference" href="#contains%2CCircleRef%2CVector2Obj%2CVector2Obj"
-    title="contains(self: CircleRef; a, b: Vector2Obj): bool"><wbr />contains<span class="attachedType">CircleRef</span></a></li>
-  <li><a class="reference" href="#%24%2CCircleRef"
-    title="`$`(self: CircleRef): string"><wbr />`$`<span class="attachedType">CircleRef</span></a></li>
+    title="Circle(vec: Vector2Obj; r: float): CircleObj"><wbr />Circle<span class="attachedType">CircleObj</span></a></li>
+  <li><a class="reference" href="#contains%2CCircleObj%2Cfloat%2Cfloat"
+    title="contains(self: CircleObj; x, y: float): bool"><wbr />contains<span class="attachedType">CircleObj</span></a></li>
+  <li><a class="reference" href="#contains%2CCircleObj%2CVector2Obj"
+    title="contains(self: CircleObj; vec2: Vector2Obj): bool"><wbr />contains<span class="attachedType">CircleObj</span></a></li>
+  <li><a class="reference" href="#contains%2CCircleObj%2CCircleObj"
+    title="contains(self, other: CircleObj): bool"><wbr />contains<span class="attachedType">CircleObj</span></a></li>
+  <li><a class="reference" href="#contains%2CCircleObj%2CVector2Obj%2CVector2Obj"
+    title="contains(self: CircleObj; a, b: Vector2Obj): bool"><wbr />contains<span class="attachedType">CircleObj</span></a></li>
+  <li><a class="reference" href="#%24%2CCircleObj"
+    title="`$`(self: CircleObj): string"><wbr />`$`<span class="attachedType">CircleObj</span></a></li>
 
   </ul>
 </li>
@@ -159,20 +157,13 @@ function main() {
 
 
 </dd>
-<a id="CircleRef"></a>
-<dt><pre><a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a></pre></dt>
-<dd>
-
-
-
-</dd>
 
 </dl></div>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <a id="Circle,float,float,float"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Circle%2Cfloat%2Cfloat%2Cfloat"><span class="Identifier">Circle</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">,</span> <span class="Identifier">r</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#Circle%2Cfloat%2Cfloat%2Cfloat"><span class="Identifier">Circle</span></a><span class="Other">(</span><span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">,</span> <span class="Identifier">r</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Circle object.</p>
@@ -187,7 +178,7 @@ function main() {
 
 </dd>
 <a id="Circle,Vector2Obj,float"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Circle%2CVector2Obj%2Cfloat"><span class="Identifier">Circle</span></a><span class="Other">(</span><span class="Identifier">vec</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">;</span> <span class="Identifier">r</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#Circle%2CVector2Obj%2Cfloat"><span class="Identifier">Circle</span></a><span class="Other">(</span><span class="Identifier">vec</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">;</span> <span class="Identifier">r</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Circle object.</p>
@@ -198,36 +189,36 @@ function main() {
 
 
 </dd>
-<a id="contains,CircleRef,float,float"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircleRef%2Cfloat%2Cfloat"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="contains,CircleObj,float,float"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircleObj%2Cfloat%2Cfloat"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns true, if <tt class="docutils literal"><span class="pre">x</span></tt>,`y` in the circle.
 
 </dd>
-<a id="contains,CircleRef,Vector2Obj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircleRef%2CVector2Obj"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a><span class="Other">;</span> <span class="Identifier">vec2</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="contains,CircleObj,Vector2Obj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircleObj%2CVector2Obj"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a><span class="Other">;</span> <span class="Identifier">vec2</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns true, if <tt class="docutils literal"><span class="pre">vec2</span></tt> in the circle.
 
 </dd>
-<a id="contains,CircleRef,CircleRef"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircleRef%2CCircleRef"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">,</span> <span class="Identifier">other</span><span class="Other">:</span> <a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="contains,CircleObj,CircleObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircleObj%2CCircleObj"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">,</span> <span class="Identifier">other</span><span class="Other">:</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns true, if <tt class="docutils literal"><span class="pre">self</span></tt> intersects with <tt class="docutils literal"><span class="pre">other</span></tt> circle.
 
 </dd>
-<a id="contains,CircleRef,Vector2Obj,Vector2Obj"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircleRef%2CVector2Obj%2CVector2Obj"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a><span class="Other">;</span> <span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="contains,CircleObj,Vector2Obj,Vector2Obj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CCircleObj%2CVector2Obj%2CVector2Obj"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a><span class="Other">;</span> <span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
 
 </dd>
-<a id="$,CircleRef"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#%24%2CCircleRef"><span class="Identifier">`$`</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle.html#CircleRef"><span class="Identifier">CircleRef</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="$,CircleObj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#%24%2CCircleObj"><span class="Identifier">`$`</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="circle.html#CircleObj"><span class="Identifier">CircleObj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -243,7 +234,7 @@ Returns true, if <tt class="docutils literal"><span class="pre">self</span></tt>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-12 13:25:15 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-16 08:29:09 UTC</small>
       </div>
     </div>
   </div>
