--- a/nodesnim/nodes/node.html
+++ b/nodesnim/nodes/node.html
@@ -501,10 +501,10 @@ Deletes current node.
 <h2><a class="toc-backref" id="examples" href="#examples">Examples</a></h2><pre class="listing"><span class="Keyword">var</span>
   <span class="Identifier">smth_node</span> <span class="Operator">=</span> <span class="Identifier">Node</span><span class="Punctuation">(</span><span class="StringLit">&quot;Simple node&quot;</span><span class="Punctuation">)</span>
 
-<span class="Identifier">smth_node</span><span class="Operator">@</span><span class="Identifier">ready</span><span class="Punctuation">:</span>
+<span class="Identifier">smth_node</span><span class="Operator">@</span><span class="Identifier">on_ready</span><span class="Punctuation">(</span><span class="Identifier">self</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
   <span class="Identifier">echo</span> <span class="StringLit">&quot;node is ready!&quot;</span>
 
-<span class="Identifier">smth_node</span><span class="Operator">@</span><span class="Identifier">input</span><span class="Punctuation">(</span><span class="Identifier">event</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+<span class="Identifier">smth_node</span><span class="Operator">@</span><span class="Identifier">on_input</span><span class="Punctuation">(</span><span class="Identifier">self</span><span class="Punctuation">,</span> <span class="Identifier">event</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
   <span class="Keyword">if</span> <span class="Identifier">event</span><span class="Operator">.</span><span class="Identifier">isInputEventMouseButton</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
     <span class="Identifier">echo</span> <span class="Identifier">event</span></pre>
 
@@ -531,7 +531,7 @@ This used in childs of the NodeObj.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-16 08:29:02 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-16 14:14:08 UTC</small>
       </div>
     </div>
   </div>
